--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "website",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
+  "author": {
+    "name": "Axel Taylor",
+    "url": "https://axeltaylor.dev"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -17,8 +22,16 @@
     "@types/node": "17.0.24",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
+    "autoprefixer": "^10.4.4",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "postcss": "^8.4.12",
+    "prettier": "^2.6.2",
+    "stylelint-config-standard": "^25.0.0",
+    "tailwindcss": "^3.0.24",
     "typescript": "4.6.3"
   }
 }
