--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@notionhq/client": "^1.0.4",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0"
