--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@notionhq/client": "^1.0.4",
+    "lucide-react": "^0.41.0",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0"
